# m_django_extensions

./: README.md  pyproject.toml
fields/: __init__.py  webpfield.py
m_django_extensions/: __init__.py  admin.py  apps.py  s3filefield.py  views.py  webpfield.py  widgets.py
m_django_extensions/static/m_django_extensions/css/: s3filewidget.css
m_django_extensions/static/m_django_extensions/js/: s3filewidget.js
m_django_extensions/templates/m_django_extensions/widgets/: s3filewidget.html
tests/: settings.py  test_s3filefield.py  test_views.py
tests/testapp/: admin.py  models.py
tests/testapp/migrations/: 0001_initial.py
