[project]
name = "m-django-extensions"
version = "0.1.10"
description = ""
authors = [
    { name = "Artem Milosevic", email = "mitay93@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django>=5.0.0,<7.0.0",
    "pillow>=10.0.0,<13.0.0",
]

[project.optional-dependencies]
s3 = [
    "django-storages[s3]>=1.14,<2",
    "boto3>=1.34,<2",
]
dev = [
    "pytest>=8.0,<9",
    "pytest-django>=4.8,<5",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["m_django_extensions"]

[tool.hatch.build.targets.wheel.force-include]
"m_django_extensions/static" = "m_django_extensions/static"
"m_django_extensions/templates" = "m_django_extensions/templates"
